Sat Jun 13 22:37:02 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/entity/ToplevelScope.java: move
	  #definedGlobalVariables and #definedCommonSymbols to IR.

	* net/loveruby/cflat/ir/IR.java: ditto.

	* net/loveruby/cflat/ir/IR.java: new method
	  #isGlobalVariableDefined.

	* net/loveruby/cflat/ir/IR.java: new method
	  #isCommonSymbolDefined.

	* net/loveruby/cflat/ir/IR.java: new method
	  #isStringLiteralDefined.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: use these
	  methods.

Sat Jun 13 17:41:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/utils/CommandUtils.java: better error
	  message.

Sun Jun  7 13:42:15 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java
	  (StackFrameInfo): shorten code using CodeGenerator constant
	  directly.

Sun Jun  7 04:16:39 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  extract class: StackFrameInfo.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  extract method: generateFunctionBody.

	net/loveruby/cflat/entity/DefinedFunction.java: new method
	  #lvarScope.

Sun Jun  7 03:17:06 2009  Minero Aoki  <aamine@loveruby.net>

	* sysdep/x86/CodeGenerator.java (compileFunctionBody): fix offset
	  bug.

Sun Jun  7 03:02:35 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring
	  compileFunctionBody.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: objectify
	  VirtualStack.

	* net/loveruby/cflat/asm/IndirectMemoryReference.java: new method
	  .relocatable to generate relocatable IndirectMemoryReference.

	* net/loveruby/cflat/asm/MemoryReference.java: new method
	  #fixOffset.

	* net/loveruby/cflat/asm/DirectMemoryReference.java: new method
	  #fixOffset.

	* net/loveruby/cflat/asm/Assembly.java: remove fixStackOffset.

	* net/loveruby/cflat/asm/Operand.java: ditto.
