@@ -1,7 +1,7 @@
 package net.loveruby.cflat.sysdep;
 import java.io.PrintStream;
 
-public interface AssemblyFile {
+public interface AssemblyCode {
     String toSource();
     void dump();
     void dump(PrintStream s);
