@@ -1,5 +1,5 @@
 package net.loveruby.cflat.sysdep;
 
 public interface CodeGenerator {
-    AssemblyFile generate(net.loveruby.cflat.ir.IR ir);
+    AssemblyCode generate(net.loveruby.cflat.ir.IR ir);
 }
