@@ -1,3 +1,7 @@
+Sat Jun 13 22:42:24 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* rename class: AssemblyFile -> AssemblyCode.
+
 Sat Jun 13 22:37:02 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/entity/ToplevelScope.java: move
